--- a/templates/preview.html
+++ b/templates/preview.html
@@ -5,22 +5,30 @@
 		<form id="preview_form" action="\preview" method="POST">
 		<div class="form-group">
 			<label for="translated_text">text to be translated</label>
-			<textarea disabled required class="form-control" rows='5' placeholder='Hello, friend!' id="translated_text" name="translated_text">{{ message['text'] }}</textarea>
+			<textarea required class="form-control" rows='5' placeholder='Hello, friend!' id="translated_text" name="translated_text">{{ message['text'] }}</textarea>
 		</div>
 		<div class="form-group">
 			<div class="input-group mb-3">
   				<div class="input-group-prepend">
     				<span class="input-group-text" id="addresseeAddon">addressee</span>
  				</div>
-				<input disabled required multiple class="form-control" id="addressee" name="addressee" placeholder='example@example.com' ariadescribedby="addresseeAddon" type="email" value="{{ message['addressee'] }}">
+				<input required multiple class="form-control" id="addressee" name="addressee" placeholder='example@example.com' ariadescribedby="addresseeAddon" type="email" value="{{ message['addressee'] }}">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="from">from</label>
-			<input disabled required class="form-control" id="addresser" name="addresser" placeholder='John Harvard' ariadescribedby="privacyText" type="text" value="{{ message['addresser'] }}">
+			<input required class="form-control" id="addresser" name="addresser" placeholder='John Harvard' ariadescribedby="privacyText" type="text" value="{{ message['addresser'] }}">
 		</div>
 		<div class="form-group">
-			<small class="form-text">No preview for attachments</small>
+			<div class="input-group mb-3">
+  				<div class="input-group-prepend">
+    				<span class="input-group-text" id="fileAddon">file</span>
+ 				</div>
+				<input readonly required multiple class="form-control" id="file" name="file" placeholder='selected file' ariadescribedby="fileAddon" type="text" value="{{ message['file'] }}">
+			</div>
+		</div>
+		<div class="form-group">
+			<small class="form-text">No translation preview for attachments</small>
 		</div>
 		<button class="btn btn-primary" type='submit'>Send</button>
 		<a href="/index">Cancel</a>
