--- a/templates/preview.html
+++ b/templates/preview.html
@@ -31,7 +31,7 @@
 			<small class="form-text">No translation preview for attachments</small>
 		</div>
 		<button class="btn btn-primary" type='submit'>Send</button>
-		<a href="/index">Cancel</a>
+		<a href="/">Cancel</a>
 	</form>
 	</div>
 {% endblock %}
