added better css styling for flashed messages

--- a/static/style.css
+++ b/static/style.css
@@ -57,6 +57,6 @@ table
 .flashed
 {
 	border-radius: 25px;
-	background-color: #ffe187;
-	padding: 2%;
+	background-color: #e5a15e;
+	padding: 3%;
 }
