--- a/templates/preview.html
+++ b/templates/preview.html
@@ -17,12 +17,12 @@
 	  				<div class="input-group-prepend">
 	    				<span class="input-group-text" id="addresseeAddon">addressee</span>
 	 				</div>
-					<input required multiple class="form-control" id="addressee" name="addressee" placeholder='example@example.com' ariadescribedby="addresseeAddon" type="email" value="{{ message['addressee'] }}">
+					<input readonly required multiple class="form-control" id="addressee" name="addressee" placeholder='example@example.com' ariadescribedby="addresseeAddon" type="email" value="{% for addressee in message['addressee'] %} {{ addressee + ' ' }} {% endfor %}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="from">from</label>
-				<input required class="form-control" id="addresser" name="addresser" placeholder='John Harvard' ariadescribedby="privacyText" type="text" value="{{ message['addresser'] }}">
+				<input readonly required class="form-control" id="addresser" name="addresser" placeholder='John Harvard' ariadescribedby="privacyText" type="text" value="{{ message['addresser'] }}">
 			</div>
 			<div class="form-group">
 				<div class="input-group mb-3">
