--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
 		<footer>
 			<nav>
 				<p>Pirate Translation API provided by <a href="https://funtranslations.com/">Fun Translations</a></p>
-				<p>Copyright trap-money 2018</p>
+				<p><a href="https://github.com/kevalii/book-o-piracy">Contribute to Book O' Piracy on GitHub!</a></p></p>
 			</nav> 
 		</footer>
 	</body>
