--- a/templates/preview.html
+++ b/templates/preview.html
@@ -36,7 +36,7 @@
 				<small class="form-text">No translation preview for attachments</small>
 			</div>
 			<button class="btn btn-primary" type='submit'>Send</button>
-			<a href="/">Cancel</a>
+			<span class='flashed'><a href="/">Cancel</a></span>
 		</form>
 		<script src="static/editor.js?v=1.3.6.5"></script>
 	</div>
